stages/stage3/k8s/apps/circulation/circulation-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: circulation-allow-specific
  namespace: apollo11-apps
spec:
  podSelector:
    matchLabels:
      app: circulation
  policyTypes:
    - Ingress
  ingress:
      - from:
          - namespaceSelector:
              matchLabels:
                name: apollo11-ui
            podSelector:
              matchLabels:
                app: frontend
